OKBETOK-2454 添加客服 OKBETOK-2526 游戏名字添加 OKBETOK-2488  弹窗宽度修改 OKBETOK-2492 直播数量修改 OKBETOK-2514 让球盘名字修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1317,7 +1317,7 @@
     <string name="collse_live">Save live</string>
     <string name="enter_live">进入直播间</string>
     <string name="accept_current_odd_to_bet">Bet at current odds</string>
-    <string name="ou_hdp_hdp">让分盘</string>
+    <string name="ou_hdp_hdp">让球盘</string>
     <string name="big_or_small">大小盘</string>
     <string name="please_input_you_account">请输入用户名</string>
     <string name="error_input_account">用户不存在</string>
