--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1303,4 +1303,5 @@
     <string name="collse_live">Save live</string>
     <string name="accept_current_odd_to_bet">Bet at current odds</string>
     <string name="home_back">Back</string>
+    <string name="enter_live">Masuk ke ruang live</string>
 </resources>
