--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1293,4 +1293,5 @@
     <string name="collse_live">Lưu livestream</string>
     <string name="accept_current_odd_to_bet">Cược với tỷ lệ cược hiện tại</string>
     <string name="home_back">Trở về</string>
+    <string name="enter_live">Vào live</string>
 </resources>
