--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1315,7 +1315,7 @@
     <string name="total_reward_amount">Cumulative jackpot</string>
     <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="collse_live">Save live</string>
-    <string name="enter_live">进入直播间</string>
+    <string name="enter_live">Masuk ke ruang live</string>
     <string name="accept_current_odd_to_bet">Bet at current odds</string>
     <string name="ou_hdp_hdp">让分盘</string>
     <string name="big_or_small">大小盘</string>
