移除BaseActivity中的EventBus注册，新增EventBusUtil类。走查部分ui

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -347,6 +347,7 @@
     <string name="bottom_nav_chat">ที่จะสนทนากับ</string>
     <string name="bottom_nav_my_account">ของฉัน</string>
     <string name="game_settlement">ผลลัพธ์</string>
+    <string name="app_download">ดาวน์โหลดแอป</string>
     <string name="league">ลีก</string>
     <string name="score">นาที</string>
     <string name="section">ระยะเวลา</string>
