--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -172,6 +172,7 @@
     <string name="profile_center">Trung tâm cá nhân</string>
     <string name="member_level">Cấp bậc hội viên</string>
     <string name="game_settlement">Kết quả trận đấu</string>
+    <string name="app_download">Tải xuống ứng dụng</string>
     <string name="version_update">Tải xuống ứng dụng</string>
     <string name="sign_out">Đăng xuất</string>
     <string name="label_version">Phiên bản</string>
