--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -195,6 +195,7 @@
     <string name="profile_center">个人中心</string>
     <string name="member_level">会员层级</string>
     <string name="game_settlement">赛果结算</string>
+    <string name="app_download">APP下载</string>
     <string name="version_update">版本更新</string>
     <string name="sign_out">退出登录</string>
     <string name="label_version">版本号</string>
