--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,6 +196,7 @@
     <string name="profile_center">Profile</string>
     <string name="member_level">Member level</string>
     <string name="game_settlement">Result</string>
+    <string name="app_download">App Download</string>
     <string name="version_update">Update Version</string>
     <string name="sign_out">Logout</string>
     <string name="label_version">Version</string>
