--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1326,4 +1326,6 @@
     <string name="your_bet_order_fail">投注失败,赔率己改变</string>
     <string name="bet_others">下注其他</string>
     <string name="check_bet_detail">查看注单详情</string>
+    <string name="okbet_live_name">OKBET主播</string>
+    <string name="please_input_you_account">请输入你的账号</string>
 </resources>
