--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1222,5 +1222,8 @@
     <string name="new_games_beta">เกมใหม่เบต้า</string>
     <string name="match_live">Giải Vô địch Quốc gia Ý</string>
     <string name="draw_name">และ</string>
+    <string name="text_1">1</string>
+    <string name="text_2">2</string>
+    <string name="text_x">X</string>
     <!--F005-->
 </resources>
