--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1294,4 +1294,6 @@
     <string name="accept_current_odd_to_bet">Cược với tỷ lệ cược hiện tại</string>
     <string name="home_back">Trở về</string>
     <string name="enter_live">Vào live</string>
+    <string name="check_bet_detail">Chi tiết đặt cược</string>
+    <string name="big_or_small">Cược trên/ dưới</string>
 </resources>
