--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1223,5 +1223,7 @@
     <string name="new_games_beta">เกมใหม่เบต้า</string>
     <string name="match_live">Giải Vô địch Quốc gia Ý</string>
     <string name="draw_name">และ</string>
+    <string name="check_bet_detail">รายละเอียดการเดิมพัน</string>
+    <string name="win_line">1X2</string>
     <!--F005-->
 </resources>
