多语言资源数据更新

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1313,4 +1313,5 @@
     <string name="text_1">1</string>
     <string name="text_2">2</string>
     <string name="text_x">X</string>
+    <string name="ou_hdp_hdp">Handicap</string>
 </resources>
