--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1316,4 +1316,5 @@
     <string name="bet_others">下注其他</string>
     <string name="check_bet_detail">查看注单详情</string>
     <string name="big_or_small">大小盘</string>
+    <string name="ou_hdp_hdp">让球盘</string>
 </resources>
