--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1300,4 +1300,5 @@
     <string name="text_1">1</string>
     <string name="text_2">2</string>
     <string name="text_x">X</string>
+    <string name="ou_hdp_hdp">Cược chấp</string>
 </resources>
