--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1314,4 +1314,5 @@
     <string name="text_2">2</string>
     <string name="text_x">X</string>
     <string name="ou_hdp_hdp">Handicap</string>
+    <string name="see_more">See more&#160;</string>
 </resources>
