--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1301,4 +1301,5 @@
     <string name="text_2">2</string>
     <string name="text_x">X</string>
     <string name="ou_hdp_hdp">Cược chấp</string>
+    <string name="see_more">Xem thêm&#160;</string>
 </resources>
