--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1317,4 +1317,5 @@
     <string name="check_bet_detail">查看注单详情</string>
     <string name="big_or_small">大小盘</string>
     <string name="ou_hdp_hdp">让球盘</string>
+    <string name="see_more">查看更多</string>
 </resources>
