--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1289,7 +1289,7 @@
     <string name="comingsoon">Coming soon</string>
     <string name="forget_password">Forgot Password</string>
     <string name="member_name">Member</string>
-    <string name="find_all">"More&#160;"</string>
+    <string name="find_all">More&#160;</string>
     <string name="home_word_cup">WC 2022</string>
     <string name="home_on_game">OK Games</string>
     <string name="go_back_top">Back to top</string>
@@ -1335,5 +1335,6 @@
     <string name="check_bet_detail">Bets Details</string>
     <string name="dont_have_game">暂无大奖游戏</string>
     <string name="ou_hdp_hdp">Handicap</string>
+    <string name="see_more">See more&#160;</string>
 
 </resources>
