--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1302,4 +1302,6 @@
     <string name="text_x">X</string>
     <string name="ou_hdp_hdp">Cược chấp</string>
     <string name="see_more">Xem thêm&#160;</string>
+    <string name="less_than_the">U</string>
+    <string name="more_than_the">O</string>
 </resources>
