--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1309,10 +1309,12 @@
     <string name="your_bet_order_fail">Betting failed, odds changed</string>
     <string name="bet_others">Betting other</string>
     <string name="check_bet_detail">Bets Details</string>
-    <string name="big_or_small">Over/under</string>
+    <string name="big_or_small">Over/Under</string>
     <string name="text_1">1</string>
     <string name="text_2">2</string>
     <string name="text_x">X</string>
     <string name="ou_hdp_hdp">Handicap</string>
     <string name="see_more">See more&#160;</string>
+    <string name="less_than_the">U</string>
+    <string name="more_than_the">O</string>
 </resources>
