--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1318,14 +1318,13 @@
     <string name="collse_live">Save live</string>
     <string name="enter_live">Masuk ke ruang live</string>
     <string name="accept_current_odd_to_bet">Bet at current odds</string>
-    <string name="big_or_small">Over/under</string>
+    <string name="big_or_small">Over/Under</string>
     <string name="home_all_game">All</string>
     <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
     <string name="okbet_live_name">OKBET主播</string>
     <string name="please_input_you_account">请输入你的账号</string>
-    <string name="more_than_the">大于</string>
-    <string name="less_than_the">小于</string>
+    <string name="more_than_the">O</string>
     <string name="text_1">1</string>
     <string name="text_2">2</string>
     <string name="text_x">X</string>
@@ -1336,5 +1335,7 @@
     <string name="dont_have_game">暂无大奖游戏</string>
     <string name="ou_hdp_hdp">Handicap</string>
     <string name="see_more">See more&#160;</string>
+    <string name="less_than_the">U</string>
+
 
 </resources>
