--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1318,4 +1318,7 @@
     <string name="big_or_small">大小盘</string>
     <string name="ou_hdp_hdp">让球盘</string>
     <string name="see_more">查看更多</string>
+    <string name="dont_have_game">暂无大奖游戏</string>
+    <string name="please_input_you_account">请输入你的账号</string>
+    <string name="okbet_live_name">OKBET主播</string>
 </resources>
