--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1322,8 +1322,8 @@
     <string name="home_all_game">All</string>
     <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
-    <string name="okbet_live_name">OKBET主播</string>
-    <string name="please_input_you_account">请输入你的账号</string>
+    <string name="okbet_live_name">OKBET MC</string>
+    <string name="please_input_you_account">Please enter your account</string>
     <string name="more_than_the">大于</string>
     <string name="less_than_the">小于</string>
     <string name="text_1">1</string>
@@ -1333,7 +1333,7 @@
     <string name="your_bet_order_fail">Betting failed, odds changed</string>
     <string name="bet_others">Betting other</string>
     <string name="check_bet_detail">Bets Details</string>
-    <string name="dont_have_game">暂无大奖游戏</string>
+    <string name="dont_have_game">No Jackpot Games available</string>
     <string name="ou_hdp_hdp">Handicap</string>
     <string name="see_more">See more&#160;</string>
 
