--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1323,4 +1323,5 @@
     <string name="dont_have_game">暂无大奖游戏</string>
     <string name="please_input_you_account">请输入你的账号</string>
     <string name="okbet_live_name">OKBET主播</string>
+    <string name="cs_center">帮助中心</string>
 </resources>
