--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1320,4 +1320,5 @@
     <string name="dont_have_game">No Jackpot Games available</string>
     <string name="please_input_you_account">Please enter your account</string>
     <string name="okbet_live_name">OKBET MC</string>
+    <string name="cs_center">CS Center</string>
 </resources>
