--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1336,6 +1336,7 @@
     <string name="ou_hdp_hdp">Handicap</string>
     <string name="see_more">See more&#160;</string>
     <string name="less_than_the">U</string>
+    <string name="cs_center">CS Center</string>
 
 
 </resources>
