完善赔率接收逻辑

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -211,7 +211,7 @@
     <string name="badminton">Cầu lông</string>
     <string name="volleyball">Bóng Chuyền</string>
     <string name="table_tennis">Bóng bàn</string>
-    <string name="ice_hockey">Khúc côn cầu trên sân băng</string>
+    <string name="ice_hockey">Ice hockey</string>
     <string name="boxing">Quyền anh</string> <!--C029-->
     <string name="snooker">Bida</string>
     <string name="cricket">Bóng gậy</string>
