赛事详情返回优化

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1290,11 +1290,11 @@
     <string name="home_sports">Sports</string>
     <string name="home_word_cup">WC 2022</string>
     <string name="home_slot">Slot</string>
-    <string name="home_on_game">OK Games</string>
+    <string name="home_on_game">OKGames</string>
     <string name="langugae_setting">Language Settings</string>
     <string name="setting_center">Settings</string>
     <string name="ou_odd">Euro Odds</string>
-    <string name="home_in_play">In-Play</string>
+    <string name="home_in_play">IN-PLAY</string>
     <string name="total_reward_amount">Cumulative jackpot</string>
     <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="go_back_top">Back to top</string>
