--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1291,7 +1291,7 @@
     <string name="member_name">Member</string>
     <string name="find_all">More&#160;</string>
     <string name="home_word_cup">WC 2022</string>
-    <string name="home_on_game">OK Games</string>
+    <string name="home_on_game">OKGames</string>
     <string name="go_back_top">Back to top</string>
     <string name="win_line">1X2</string>
     <string name="match_live">Live Matches</string>
@@ -1312,7 +1312,7 @@
     <string name="langugae_setting">Language Settings</string>
     <string name="setting_center">Settings</string>
     <string name="ou_odd">Euro Odds</string>
-    <string name="home_in_play">In-Play</string>
+    <string name="home_in_play">IN-PLAY</string>
     <string name="total_reward_amount">Cumulative jackpot</string>
     <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="collse_live">Save live</string>
