--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1273,7 +1273,7 @@
     <string name="comingsoon">Coming soon</string>
     <string name="forget_password">Forgot Password</string>
     <string name="member_name">Member</string>
-    <string name="home_recommend">Recommended</string>
+    <string name="home_recommend">Popular</string>
     <string name="match_live">Hot Live</string>
     <string name="tiger_machine">Slot</string>
     <string name="hot_handicap">Hot Markets</string>
