热门盘口翻译修改

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1276,7 +1276,7 @@
     <string name="home_recommend">Popular</string>
     <string name="match_live">Hot Live</string>
     <string name="tiger_machine">Slot</string>
-    <string name="hot_handicap">Hot Markets</string>
+    <string name="hot_handicap">Hot Handicap</string>
     <string name="hot_live_match">Hot Live</string>
     <string name="hot_gaming_electronics">Hot Slot</string>
     <string name="hot_poker_game">OKGames</string>
