--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1296,7 +1296,7 @@
     <string name="win_line">1X2</string>
     <string name="match_live">Live Matches</string>
     <string name="tiger_machine">Slot</string>
-    <string name="hot_handicap">Hot Markets</string>
+    <string name="hot_handicap">Hot Handicap</string>
     <string name="hot_live_match">Hot Live</string>
     <string name="hot_gaming_electronics">Hot Slot</string>
     <string name="hot_poker_game">OKGames</string>
