--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1307,7 +1307,7 @@
     <string name="enter_live">Masuk ke ruang live</string>
     <string name="your_bet_order_success">Your betting succesful</string>
     <string name="your_bet_order_fail">Betting failed, odds changed</string>
-    <string name="bet_others">Betting other</string>
+    <string name="bet_others">Other</string>
     <string name="check_bet_detail">Bets Details</string>
     <string name="big_or_small">Over/Under</string>
     <string name="text_1">1</string>
