--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1308,4 +1308,5 @@
     <string name="please_input_you_account">Mời nhập tài khoản của bạn</string>
     <string name="okbet_live_name">MC OKBET</string>
     <string name="cs_center">CSKH</string>
+    <string name="bet_others">Khác</string>
 </resources>
