--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1318,7 +1318,7 @@
     <string name="collse_live">Save live</string>
     <string name="enter_live">Masuk ke ruang live</string>
     <string name="accept_current_odd_to_bet">Bet at current odds</string>
-    <string name="big_or_small">Over/Under</string>
+    <string name="big_or_small">O/U</string>
     <string name="home_all_game">All</string>
     <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
