1.首页tab部分滚球与体育互换位置 2.更换独赢盘翻译

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1298,7 +1298,7 @@
     <string name="total_reward_amount">Cumulative jackpot</string>
     <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="go_back_top">Back to top</string>
-    <string name="win_line">1X2</string>
+    <string name="win_line">Home&amp;Away</string>
     <string name="draw_name">Draw</string>
     <string name="home_all_game">All</string>
     <string name="collse_live">Save live</string>
