--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1225,7 +1225,7 @@
     <string name="text_2">2</string>
     <string name="text_x">X</string>
     <string name="check_bet_detail">รายละเอียดการเดิมพัน</string>
-    <string name="win_line">1X2</string>
+    <string name="win_line">เจ้าบ้าน&amp;ทีมเยือน</string>
     <string name="ou_hdp_hdp">แฮนดิแคป</string>
     <string name="less_than_the">U</string>
     <string name="more_than_the">O</string>
