--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1293,7 +1293,7 @@
     <string name="home_word_cup">WC 2022</string>
     <string name="home_on_game">OKGames</string>
     <string name="go_back_top">Back to top</string>
-    <string name="win_line">1X2</string>
+    <string name="win_line">Home&amp;Away</string>
     <string name="match_live">Live Matches</string>
     <string name="tiger_machine">Slot</string>
     <string name="hot_handicap">Hot Handicap</string>
