--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1288,7 +1288,7 @@
     <string name="total_reward_amount">Jackpot tích luỹ</string>
     <string name="hot_elec_game">Game thưởng khủng</string>
     <string name="go_back_top">Về đầu trang</string>
-    <string name="win_line">1X2</string>
+    <string name="win_line">Chủ &amp; Khách</string>
     <string name="home_all_game">Tất cả</string>
     <string name="draw_name">hòa</string>
     <string name="collse_live">Lưu livestream</string>
