--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1324,4 +1324,6 @@
     <string name="please_input_you_account">请输入你的账号</string>
     <string name="okbet_live_name">OKBET主播</string>
     <string name="cs_center">帮助中心</string>
+    <string name="Pinned">已置顶</string>
+    <string name="Unpin">取消置顶</string>
 </resources>
