--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1323,4 +1323,5 @@
     <string name="cs_center">CS Center</string>
     <string name="Pinned">Pinned</string>
     <string name="Unpin">Unpin</string>
+    <string name="new_game_and_testing">New Games | Beta</string>
 </resources>
