--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1043,7 +1043,7 @@
     <string name="redenvelope_trantype_received">รับซองแดง</string>
     <string name="new_version">มีรุ่นใหม่</string>
     <string name="redenvelope_amount">จำนวนซองแดง</string>
-    <string name="online_online_bank">E-PON</string>
+    <string name="online_online_bank">Online Banking</string>
     <string name="sport_relative">กีฬาที่เกี่ยวข้อง</string>
     <string name="timezone">เขตเวลา</string>
     <string name="timezone_change">สวิตช์โซนเวลา</string>
