投注最小限额

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1324,4 +1324,5 @@
     <string name="Pinned">Pinned</string>
     <string name="Unpin">Unpin</string>
     <string name="new_game_and_testing">New Games | Beta</string>
+    <string name="dont_have_slot_game">No games</string>
 </resources>
