--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,7 +123,7 @@
     <string name="btn_register">Sign Up</string>
     <string name="no_announcement">No announcement</string>
     <string name="lottery">Lottery</string>
-    <string name="poker">Jackpot</string>
+    <string name="poker">OKGames</string>
     <string name="slot">Slot</string>
     <string name="fishing">Fishing</string>
     <string name="more">More</string>
