修改赛事注单状态

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -136,7 +136,7 @@
     <string name="home_tab_eps">CƯỢC ĐẶC BIỆT</string>
     <string name="game_soon">Sắp Diễn Ra</string>
     <string name="label_in_play_games">kèo đang diễn ra</string>
-    <string name="label_all">tất cả</string>
+    <string name="label_all">Tất cả</string>
     <string name="label_match_recommend">Đề xuất sự kiện</string>
     <string name="label_highlight">Đặc sắc</string>
     <string name="display_more">Hiển thị nhiều hơn</string>
