--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1109,7 +1109,7 @@
     <string name="total_capital">Total Stake(%s)：</string>
     <string name="total_win_amount">EST Winning(%s)：</string>
     <string name="delete_bet">Delete</string>
-    <string name="btn_login_bet">Log in to Bet</string>
+    <string name="btn_login_bet">Log in before betting</string>
     <string name="confirm_single_bets">Confirm %d Single Bets</string>
     <string name="confirm_multiple_bets">Confirm %d Multiple Bets</string>
     <string name="btn_remove_closed_selections">Remove closed selections</string>
