--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -307,7 +307,7 @@
     <string name="record_time">Thời gian chuyển đổi</string>
     <string name="choose_bet_state">Chọn trạng thái đơn cược</string>
     <string name="champion_play">Trò chơi vô địch</string>
-    <string name="inquire">Kiểm tra</string>
+    <string name="inquire">Tìm kiếm</string>
     <string name="order_number">Mã số đặt cược</string>
     <string name="order_number_colon">Mã đơn cược</string>
     <string name="bet_type">Cách đặt cược</string>
