--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,7 +268,7 @@
     <string name="fourth_session">4th period</string>
     <string name="add_time_first_half_game">Overtime 1st Half</string>
     <string name="add_time_second_half_game">Overtime 2nd Half</string>
-    <string name="account_balance">Total</string>
+    <string name="account_balance">Total Balance</string>
     <string name="user_id_colon">User ID：</string>
     <string name="recharge">Deposit</string>
     <string name="account_transfer">Transfer Limit</string>
@@ -672,13 +672,13 @@
     <string name="all_out_plat">All out</string>
     <string name="all_in_plat">All in</string>
     <string name="write_suggestion">Submission</string>
-   <!-- <string name="can_input_1_to_500_word">Can enter 1–500 words</string>&lt;!&ndash;请描述您遇到的问题&ndash;&gt;-->
+    <!-- <string name="can_input_1_to_500_word">Can enter 1–500 words</string>&lt;!&ndash;请描述您遇到的问题&ndash;&gt;-->
     <string name="third_game_ky">KY games</string>
     <string name="odd_type_title">Odds Setting</string>
-    <string name="odd_type_eu">EU Odds</string>
-    <string name="odd_type_hk">HK Odds</string>
-    <string name="odd_type_mys">MY Odds</string>
-    <string name="odd_type_idn">ID Odds</string>
+    <string name="odd_type_eu">EU</string>
+    <string name="odd_type_hk">HK</string>
+    <string name="odd_type_mys">MY</string>
+    <string name="odd_type_idn">ID</string>
     <string name="submit_time">Submit time:</string>
     <string name="feedback_time">Feedback time:</string>
     <string name="not_reply_yet">Has not been feedback</string>
@@ -1298,8 +1298,8 @@
     <string name="tiger_machine">Slot</string>
     <string name="hot_handicap">Hot Handicap</string>
     <string name="hot_live_match">Hot Live</string>
-    <string name="hot_gaming_electronics">Hot Slot</string>
-    <string name="hot_poker_game">OKGames</string>
+    <string name="hot_gaming_electronics">SLOT GAME</string>
+    <string name="hot_poker_game">Card Games</string>
     <string name="check_all">All</string>
     <string name="worldcup">WC 2022</string>
     <string name="sport_classify">Sports Classification</string>
@@ -1319,7 +1319,7 @@
     <string name="enter_live">Masuk ke ruang live</string>
     <string name="accept_current_odd_to_bet">Bet at current odds</string>
     <string name="big_or_small">O/U</string>
-    <string name="home_all_game">All</string>
+    <string name="home_all_game">All Games</string>
     <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
     <string name="more_than_the">O</string>
