--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1178,7 +1178,7 @@
     <string name="video">วีดีโอ</string>
     <string name="reverse_select">ย้อนการเลือก</string>
     <string name="betting">เดิมพัน</string>
-    <string name="other_bet">บันทึกการเดิมพันอื่นๆ</string>
+    <string name="other_bet">เติมพันอย่างอื่น</string>
     <string name="sport_match">การแข่งขันในรอบ</string>
     <string name="remove_account_warning">คุณแน่ใจไหมว่าจะลบบัญชี</string>
     <string name="my_message">ข้อความ</string>
