--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1224,7 +1224,7 @@
     <string name="video">Video</string>
     <string name="reverse_select">Đảo chọn</string>
     <string name="betting">Đặt cược</string>
-    <string name="other_bet">Các lịch sử cá cược khác</string>
+    <string name="other_bet">Các cược khác</string>
     <string name="sport_match">Trận đấu</string>
     <string name="remove_account_warning">Bạn có chắc chắn muốn xoá tài khoản hiện tại của mình không?</string>
     <string name="my_message">Tin nhắn</string>
