修改密码需求处理

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1342,5 +1342,5 @@
     <string name="new_game_and_testing">New Games | Beta</string>
     <string name="dont_have_slot_game">No games</string>
     <string name="bad_param">参数错误</string>
-
+    <string name="error_verification_code_forget">验证码错误</string>
 </resources>
