--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1230,5 +1230,6 @@
     <string name="less_than_the">U</string>
     <string name="more_than_the">O</string>
     <string name="cs_center">ศูนย์ช่วยเหลือ</string>
+    <string name="home_slot">สล็อต</string>
     <!--F005-->
 </resources>
