--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1312,7 +1312,7 @@
     <string name="langugae_setting">Language Settings</string>
     <string name="setting_center">Settings</string>
     <string name="ou_odd">Euro Odds</string>
-    <string name="home_in_play">IN-PLAY</string>
+    <string name="home_in_play">In-Play</string>
     <string name="total_reward_amount">Cumulative jackpot</string>
     <string name="hot_elec_game">Hot Jackpot Games</string>
     <string name="collse_live">Save live</string>
