--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1313,4 +1313,6 @@
     <string name="Unpin">Huỷ ghim</string>
     <string name="your_bet_order_success">Cược đơn thành công</string>
     <string name="dont_have_slot_game">Hiện không có game</string>
+    <string name="find_back_password">lấy lại mật khẩu</string>
+    <string name="place_enter_your_account">vui lòng nhập tên đăng nhập</string>
 </resources>
