冠军二级收起

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1231,5 +1231,6 @@
     <string name="more_than_the">O</string>
     <string name="cs_center">ศูนย์ช่วยเหลือ</string>
     <string name="home_slot">สล็อต</string>
+    <string name="deadline">กำหนดสิ้นสุด</string>
     <!--F005-->
 </resources>
