--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1328,4 +1328,5 @@
     <string name="Unpin">取消置顶</string>
     <string name="new_game_and_testing">(新游戏，测试中...)</string>
     <string name="dont_have_slot_game">暂无棋牌游戏</string>
+    <string name="deadline">截止</string>
 </resources>
