--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1314,7 +1314,7 @@
     <string name="text_2">2</string>
     <string name="text_x">X</string>
     <string name="ou_hdp_hdp">Handicap</string>
-    <string name="see_more">See more&#160;</string>
+    <string name="see_more">More&#160;</string>
     <string name="less_than_the">U</string>
     <string name="more_than_the">O</string>
     <string name="dont_have_game">No Jackpot Games available</string>
@@ -1325,4 +1325,5 @@
     <string name="Unpin">Unpin</string>
     <string name="new_game_and_testing">New Games | Beta</string>
     <string name="dont_have_slot_game">No games</string>
+    <string name="deadline">Deadline</string>
 </resources>
