--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1315,4 +1315,5 @@
     <string name="dont_have_slot_game">Hiện không có game</string>
     <string name="find_back_password">lấy lại mật khẩu</string>
     <string name="place_enter_your_account">vui lòng nhập tên đăng nhập</string>
+    <string name="deadline">Hạn đến</string>
 </resources>
