--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1334,7 +1334,7 @@
     <string name="check_bet_detail">Bets Details</string>
     <string name="dont_have_game">No Jackpot Games available</string>
     <string name="ou_hdp_hdp">Handicap</string>
-    <string name="see_more">See more&#160;</string>
+    <string name="see_more">More&#160;</string>
     <string name="less_than_the">U</string>
     <string name="cs_center">CS Center</string>
     <string name="Pinned">Pinned</string>
@@ -1350,5 +1350,6 @@
     <string name="error_tips_confirm_password">您输入的密码不一致，请重新输入</string>
     <string name="hide_confirm_password">确认新登录密码</string>
     <string name="error_new_password">密码为6-20个字符必须含有数字和字母的组合！</string>
+    <string name="deadline">Deadline</string>
 
 </resources>
