多语言修改

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1326,4 +1326,5 @@
     <string name="new_game_and_testing">New Games | Beta</string>
     <string name="dont_have_slot_game">No games</string>
     <string name="deadline">Deadline</string>
+    <string name="place_enter_your_account">Please enter user name</string>
 </resources>
