--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1351,5 +1351,8 @@
     <string name="hide_confirm_password">确认新登录密码</string>
     <string name="error_new_password">密码为6-20个字符必须含有数字和字母的组合！</string>
     <string name="deadline">Deadline</string>
+    <string name="accept_any_change_in_odds">接受任何赔率变化</string>
+    <string name="accept_better_change_in_odds">接受更好赔率变化</string>
+    <string name="accept_never_change_in_odds">永不接受赔率变化</string>
 
 </resources>
