--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1315,8 +1315,8 @@
     <string name="text_x">X</string>
     <string name="ou_hdp_hdp">Handicap</string>
     <string name="see_more">More&#160;</string>
-    <string name="less_than_the">U</string>
-    <string name="more_than_the">O</string>
+    <string name="less_than_the">Under</string>
+    <string name="more_than_the">Over</string>
     <string name="dont_have_game">No Jackpot Games available</string>
     <string name="please_input_you_account">Please enter your account</string>
     <string name="okbet_live_name">OKBET MC</string>
