--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1227,8 +1227,8 @@
     <string name="check_bet_detail">รายละเอียดการเดิมพัน</string>
     <string name="win_line">เจ้าบ้าน&amp;ทีมเยือน</string>
     <string name="ou_hdp_hdp">แฮนดิแคป</string>
-    <string name="less_than_the">U</string>
-    <string name="more_than_the">O</string>
+    <string name="less_than_the">Uเล็ก</string>
+    <string name="more_than_the">ใหญ่</string>
     <string name="cs_center">ศูนย์ช่วยเหลือ</string>
     <string name="home_slot">สล็อต</string>
     <string name="deadline">กำหนดสิ้นสุด</string>
