--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1322,7 +1322,7 @@
     <string name="home_all_game">All Games</string>
     <string name="home_back">Back</string>
     <string name="draw_name">Draw</string>
-    <string name="more_than_the">O</string>
+    <string name="more_than_the">Over</string>
     <string name="okbet_live_name">OKBET MC</string>
     <string name="please_input_you_account">Please enter your account</string>
     <string name="text_1">1</string>
@@ -1335,7 +1335,7 @@
     <string name="dont_have_game">No Jackpot Games available</string>
     <string name="ou_hdp_hdp">Handicap</string>
     <string name="see_more">More&#160;</string>
-    <string name="less_than_the">U</string>
+    <string name="less_than_the">Under</string>
     <string name="cs_center">CS Center</string>
     <string name="Pinned">Pinned</string>
     <string name="Unpin">Unpin</string>
