--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1313,7 +1313,13 @@
     <string name="Unpin">Huỷ ghim</string>
     <string name="your_bet_order_success">Cược đơn thành công</string>
     <string name="dont_have_slot_game">Hiện không có game</string>
-    <string name="find_back_password">lấy lại mật khẩu</string>
+    <string name="find_back_password">Tìm lại mật khẩu</string>
     <string name="deadline">Hạn đến</string>
     <string name="place_enter_your_account">Mời nhập tên người dùng</string>
+    <string name="error_phone_num">SĐT không chính xác</string>
+    <string name="tips_login_password_success">Sửa mật khẩu thành công, mời đăng nhập lại</string>
+    <string name="error_tips_confirm_password">Mật khẩu bạn nhập khác nhau, mời nhập lại</string>
+    <string name="hide_confirm_password">Xác nhận mật khẩu mới</string>
+    <string name="error_new_password">Mật khẩu từ 6-20 ký tự bao gồm cả chữ và số</string>
+
 </resources>
