1.隐藏顶部单关、串关切换面板 2.去掉底部删除按钮 3.增加底部串关、单管切换按钮

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1357,6 +1357,7 @@
     <string name="accept_never_change_in_odds">永不接受赔率变化</string>
     <string name="expand_more_combinations">展开更多组合</string>
     <string name="stacked_combination">叠起组合</string>
+    <string name="bet_parlay">+串关</string>
     <!--投注改版-->
 
 </resources>
